refactor: 메뉴가 변경되더라도 주문 항목이 변경되지 않도록 스키마 변경